providing duration for places in summary

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
 		"underscore": "*",
 		"path-extra": "*",
 		"plist": "*",
-		"hat": "*"
+		"hat": "*",
+		"countdown": "*",
+		"dict": "*"
 	},
 
 	"author": {
